--- a/mfe-landing/package.json
+++ b/mfe-landing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shell",
+  "name": "mfe-landing",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,27 +7,25 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:shell": "ng serve",
-    "start:mfe1": "cd ../mfe1 && ng serve",
-    "start:mfe2": "cd ../mfe2 && ng serve",
-    "start:mfe-landing": "cd ../mfe-landing && ng serve",
-    "start:all": "concurrently \"npm run start:shell\" \"npm run start:mfe1\" \"npm run start:mfe2\" \"npm run start:mfe-landing\""
+    "serve:ssr:mfe-landing": "node dist/mfe-landing/server/server.mjs"
   },
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^19.0.1",
     "@angular/animations": "^19.1.0",
-    "@angular/cdk": "^19.1.5",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
-    "@angular/material": "^19.1.5",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
+    "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@angular/ssr": "^19.1.6",
     "@softarc/native-federation-node": "^2.0.10",
+    "cors": "^2.8.5",
     "es-module-shims": "^1.5.12",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -37,7 +35,9 @@
     "@angular-devkit/build-angular": "^19.1.6",
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
