--- a/shared/package.json
+++ b/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mfe1",
+  "name": "shared",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,7 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^19.0.1",
     "@angular/animations": "^19.1.0",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
@@ -19,16 +18,12 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "@softarc/native-federation-node": "^2.0.10",
-    "es-module-shims": "^1.5.12",
     "rxjs": "~7.8.0",
-    "shared-lib": "file:../shared/dist/shared-lib",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-architects/native-federation": "^19.0.10",
-    "@angular-devkit/build-angular": "^19.1.6",
+    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
@@ -38,6 +33,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^19.1.0",
     "typescript": "~5.7.2"
   }
 }
