test table showcase w. shared-lib usage

--- a/shared/package.json
+++ b/shared/package.json
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.8",
+    "@angular/cdk": "^19.1.5",
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
+    "@angular/material": "^19.1.5",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
