--- a/shared/projects/shared-lib/package.json
+++ b/shared/projects/shared-lib/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^19.1.0",
-    "@angular/core": "^19.1.0"
+    "@angular/core": "^19.1.0",
+    "@angular/cdk": "^19.1.5",
+    "@angular/material": "^19.1.5"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "devDependencies": {
+    "@angular/cdk": "^19.1.5",
+    "@angular/material": "^19.1.5"
+  }
 }
